--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bottercak3": "../bottercak3",
+    "cowsay": "^1.3.1",
     "node-fetch": "^2.2.0",
     "unescape": "^1.0.1"
   },
