--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bottercak3": "../bottercak3",
     "cowsay": "^1.3.1",
+    "js-yaml": "^3.12.0",
     "node-fetch": "^2.2.0",
     "unescape": "^1.0.1"
   },
   "devDependencies": {
+    "@types/js-yaml": "^3.11.2",
     "@types/node": "^10.12.0",
     "@types/node-fetch": "^2.1.2",
     "typescript": "^3.1.3"
