--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/js-yaml": "^3.11.2",
     "@types/node": "^10.12.0",
     "@types/node-fetch": "^2.1.2",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   }
 }
