--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "lint": "tslint --project .",
     "build": "tsc"
   },
   "dependencies": {
