--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "better-sqlite3": "^5.0.1",
     "bottercak3": "../bottercak3",
     "cowsay": "^1.3.1",
     "js-yaml": "^3.12.0",
@@ -18,6 +19,7 @@
     "unescape": "^1.0.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^3.1.3",
     "@types/js-yaml": "^3.11.2",
     "@types/node": "^10.12.0",
     "@types/node-fetch": "^2.1.2",
