--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^5.0.1",
     "bottercak3": "../bottercak3",
     "cowsay": "^1.3.1",
+    "dotenv": "^6.1.0",
     "js-yaml": "^3.12.0",
     "node-fetch": "^2.2.0",
     "solvethis": "^0.1.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^3.1.3",
+    "@types/dotenv": "^4.0.3",
     "@types/js-yaml": "^3.11.2",
     "@types/node": "^10.12.0",
     "@types/node-fetch": "^2.1.2",
